--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .env
 .venv
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
+.vscode/
+esp32_code.code-workspace
+__pycache__
+/__pycache__
