--- a/Backend - Data Elaborator/api/docker-compose.yml
+++ b/Backend - Data Elaborator/api/docker-compose.yml
@@ -36,7 +36,8 @@ services:
         env_file:
             - .env
         depends_on:
-            - postgres
+            postgres:
+                condition: service_healthy
         volumes:
             - .:/app
 
