--- a/Backend - Data Elaborator/api/docker-compose.yml
+++ b/Backend - Data Elaborator/api/docker-compose.yml
@@ -1,45 +1,48 @@
 version: '3.8'
 
 services:
-    postgres:
-        image: postgres:15
-        environment:
-            POSTGRES_DB: monitoraggio_db
-            POSTGRES_USER: developer
-            POSTGRES_PASSWORD: password
-        ports:
-            - "5432:5432"
-        volumes:
-            - postgres_data:/var/lib/postgresql/data 
-            - ./init-scripts:/docker-entrypoint-initdb.d 
-        healthcheck:
-            test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-developer} -d ${DB_NAME:-monitoraggio_db}"]
-            interval: 5s
-            timeout: 3s
-            retries: 10
-    pgadmin:
-        image: dpage/pgadmin4
-        environment:
-            PGADMIN_DEFAULT_EMAIL: admin@example.com
-            PGADMIN_DEFAULT_PASSWORD: admin
-        ports:
-            - "8080:80"
-        depends_on:
-            - postgres
+  postgres:
+    # We use the PostGIS variant to support Geometry types
+    image: postgis/postgis:15-3.4-alpine
+    environment:
+      POSTGRES_DB: monitoraggio_db
+      POSTGRES_USER: developer
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./init-scripts:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-developer} -d ${POSTGRES_DB:-monitoraggio_db}"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
 
-    fastapi-app:
-        build: .
-        ports:
-            - "8000:8000"
-        environment:
-            - DATABASE_URL=${DATABASE_URL}
-        env_file:
-            - .env
-        depends_on:
-            postgres:
-                condition: service_healthy
-        volumes:
-            - .:/app
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8080:80"
+    depends_on:
+      - postgres
+
+  fastapi-app:
+    build: .
+    ports:
+      - "8000:8000"
+    environment:
+      # Ensure this matches the postgres service credentials
+      - DATABASE_URL=postgresql://developer:password@postgres:5432/monitoraggio_db
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - .:/app
 
 volumes:
-    postgres_data:
+  postgres_data:
