--- a/IoT - Data Harvester/esp32_code/platformio.ini
+++ b/IoT - Data Harvester/esp32_code/platformio.ini
@@ -1,14 +1,16 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32-c3-devkitm-1]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
+monitor_speed = 115200
+monitor_filters = esp32_exception_decoder, time
+
+lib_deps =
+    ; ADXL345 Accelerometer Driver
+    adafruit/Adafruit ADXL345@^1.3.4
+    adafruit/Adafruit Unified Sensor@^1.1.14
+    
+    ; JSON Serialization/Deserialization
+    bblanchon/ArduinoJson@^7.0.3
+    
+    ; Note: WiFiClientSecure and MbedTLS are built-in ESP32 core libraries.
