--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,41 @@
 name: Build and Push Backend Service
 
 on:
+  # Trigger the workflow on push events to the 'main' branch.
+  # Execution is limited to changes in the backend directory or this workflow definition.
   push:
     branches: [ "main" ]
     paths:
       - 'Backend - Data Elaborator/**'
+      - '.github/workflows/**'
 
 env:
+  # Define the container registry (GitHub Container Registry).
   REGISTRY: ghcr.io
+  # Define the image name, appending '-backend' to distinguish it within the monorepo.
   IMAGE_NAME: ${{ github.repository }}-backend
 
 jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    
+    # Grant necessary permissions to the GITHUB_TOKEN for package publishing.
     permissions:
       contents: read
       packages: write
 
     steps:
+      # Step 1: Check out the repository code.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Rename backend folder (Fix spaces issue)
+      # Step 2: Rename the backend directory to remove spaces.
+      # This prevents path parsing errors in the Docker CLI during the build process.
+      - name: Rename backend directory
         run: mv "Backend - Data Elaborator" backend_app
 
+      # Step 3: Authenticate with the GitHub Container Registry.
       - name: Log in to the Container Registry
         uses: docker/login-action@v3
         with:
@@ -32,6 +43,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # Step 4: Extract metadata (tags, labels) for the Docker image.
+      # This generates tags like 'latest' and the git SHA for versioning.
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -41,6 +54,8 @@ jobs:
             type=raw,value=latest
             type=sha,format=long
 
+      # Step 5: Build the Docker image and push it to GHCR.
+      # The build context points to the renamed directory 'backend_app'.
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
