refactor: rename root modules to descriptive kebab-case conventions
- Renamed 'Backend - Data Elaborator' to 'backend-data-elaborator'
- Renamed 'Frontend - Mobile App' to 'frontend-mobile-app'
- Renamed 'IoT - Data Havester" to 'iot-data-harvester'
- Updated Dockerfiles, import paths, and build configurations to match new structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - 'Backend - Data Elaborator/**'
+      - 'backend-data-elaborator/**'
       - '.github/workflows/**'
 
 env:
@@ -33,7 +33,7 @@ jobs:
       # Step 2: Rename the backend directory to remove spaces.
       # This prevents path parsing errors in the Docker CLI during the build process.
       - name: Rename backend directory
-        run: mv "Backend - Data Elaborator" backend_app
+        run: mv "backend-data-elaborator" backend_app
 
       # Step 3: Authenticate with the GitHub Container Registry.
       - name: Log in to the Container Registry
