--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,7 @@ name: Build and Push Backend Service
 
 on:
   # Trigger the workflow on push events to the 'main' branch.
+  # Execution is limited to changes in the backend directory or this workflow definition.
   push:
     branches: [ "main" ]
     paths:
@@ -9,8 +10,9 @@ on:
       - '.github/workflows/**'
 
 env:
+  # Define the container registry (GitHub Container Registry).
   REGISTRY: ghcr.io
-  # Define the image name
+  # Define the image name, appending '-backend' to distinguish it within the repository.
   IMAGE_NAME: ${{ github.repository }}-backend
 
 jobs:
@@ -18,6 +20,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     
+    # Grant necessary permissions to the GITHUB_TOKEN for package publishing.
     permissions:
       contents: read
       packages: write
@@ -27,9 +30,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # [RIMOSSO] Step 2 non serve più! La cartella backend-data-elaborator è già perfetta.
-
-      # Step 3: Authenticate with the GitHub Container Registry.
+      # Step 2: Authenticate with the GitHub Container Registry.
       - name: Log in to the Container Registry
         uses: docker/login-action@v3
         with:
@@ -37,7 +38,8 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 4: Extract metadata
+      # Step 3: Extract metadata (tags, labels) for the Docker image.
+      # This generates tags like 'latest' and the git SHA for versioning.
       - name: Extract metadata for Docker
         id: meta
         uses: docker/metadata-action@v5
@@ -47,12 +49,13 @@ jobs:
             type=raw,value=latest
             type=sha,format=long
 
-      # Step 5: Build and push
-      # OCCHIO QUI: Il context ora punta alla cartella vera!
+      # Step 4: Build the Docker image and push it to GHCR.
+      # The build context is explicitly set to the 'api' subdirectory 
+      # inside 'backend-data-elaborator' where the Dockerfile and source code reside.
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./backend-data-elaborator
+          context: ./backend-data-elaborator/api
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
