--- a/iot-data-harvester/esp32_code/platformio.ini
+++ b/iot-data-harvester/esp32_code/platformio.ini
@@ -5,12 +5,28 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, time
 
+upload_port = COM2
+monitor_port = COM2
+upload_speed = 115200
+
+upload_protocol = esptool
+
+upload_flags = 
+    --before=no_reset
+    --after=hard_reset
+    --no-stub
+
+build_flags = 
+    -D ARDUINO_USB_MODE=1
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+
+monitor_dtr = 0
+monitor_rts = 0
+
+; Execute the python script to load the variables
+extra_scripts = pre:extra_script.py
+
 lib_deps =
-    ; ADXL345 Accelerometer Driver
     adafruit/Adafruit ADXL345@^1.3.4
     adafruit/Adafruit Unified Sensor@^1.1.14
-    
-    ; JSON Serialization/Deserialization
     bblanchon/ArduinoJson@^7.0.3
-    
-    ; Note: WiFiClientSecure and MbedTLS are built-in ESP32 core libraries.
